<resources>
    <string name="app_name">Epilepsy</string>

    <string name="task">task</string>
    <string name="task_finger_tapping">Finger Tapping</string>
    <string name="task_pattern_comparison_processing">Pattern Comparison Processing</string>
    <string name="task_flanker">Flanker</string>
    <string name="task_answer">answer</string>
    <string name="task_result">task_result</string>



    <string name="pattern_comparison_processing_left">Image to be shown on the left</string>
    <string name="pattern_comparison_processing_center">Image to be shown on the right</string>
    <string name="pattern_comparison_processing_right">Image to be shown in the center, should only be star or blank</string>
    <string name="pattern_comparison_processing_yes">Button with yes icon</string>
    <string name="pattern_comparison_processing_no">Button with no icon</string>
    <string name="pattern_comparison_processing_json_question_index">question_index</string>
    <string name="pattern_comparison_processing_json_correct">correct</string>
    <string name="pattern_comparison_processing_json_elapsed_time">elapsed_time</string>

    <string name="finger_tapping_left">LEFT</string>
    <string name="finger_tapping_right">RIGHT</string>
    <string name="finger_tapping_go">Go ahead...</string>
    <string name="finger_tapping_wait">Wait...</string>
    <string name="finger_tapping_json_timer_length">timer_length</string>
    <string name="finger_tapping_json_answer">answer</string>
    <string name="finger_tapping_json_side">side</string>
    <string name="finger_tapping_json_tap_count">tap_count</string>

    <string name="flanker_left">Image to be shown on the left</string>
    <string name="flanker_right">Image to be shown on the right</string>
    <string name="flanker_target">Image to be shown in the center(target)</string>
    <string name="flanker_left_arrow">Hidden image with left arrow icon (for comparison)</string>
    <string name="flanker_answer_left">Button with left arrow icon</string>
    <string name="flanker_answer_right">Button with right arrow icon</string>
    <string name="flanker_json_question_index">question_index</string>
    <string name="flanker_json_correct">correct</string>
    <string name="flanker_json_elapsed_time">elapsed_time</string>

    <string name="answers_key">answers</string>
    <string name="answer_correct">Correct :D</string>
    <string name="answer_incorrect">Incorrect :(</string>
    <string name="title_activity_finger_tapping">FingerTappingActivity</string>
    <string name="title_activity_flanker">FlankerActivity</string>
    <string name="spatial_span">Spatial Span</string>

    <!--API Call endpoints-->
    <string name="postActivityURL">/rest/activities/activityinstanceresult/</string>
    <string name="getActivityDetailsURL">/rest/activities/activityinstance/</string>
    <string name="getScheduledActivityURL">/rest/activities/scheduledactivity</string>
    <string name="getActivityInstanceURL">/rest/activities/activityinstance/</string>

    <string name="method_prompt">Choose a method</string>
    <string name="no_internet">There is a problem connecting to the Internet.  Please make sure you have stable internet connection before proceeding.</string>

    <string-array name="method_arrays">
        <item>https</item>
        <item>http</item>
    </string-array>

</resources>
