<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ser593.com.epilepsy.UserTasks.FlankerActivity">

    <LinearLayout
        android:id="@+id/llShowTest"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_heightPercent="70%">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/iv1"
            android:layout_gravity="center"
            android:adjustViewBounds="false"
            android:scaleType="fitCenter"
            android:contentDescription="@string/pattern_comparison_processing_center" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/iv2"
            android:layout_gravity="center"
            android:adjustViewBounds="false"
            android:scaleType="fitCenter"
            android:contentDescription="@string/pattern_comparison_processing_center" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/ivTarget"
            android:layout_gravity="center"
            android:src="@drawable/ic_star"
            android:adjustViewBounds="false"
            android:scaleType="fitCenter"
            android:contentDescription="@string/pattern_comparison_processing_center" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/iv3"
            android:layout_gravity="center"
            android:adjustViewBounds="false"
            android:scaleType="fitCenter"
            android:contentDescription="@string/pattern_comparison_processing_center" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/iv4"
            android:layout_gravity="center"
            android:adjustViewBounds="false"
            android:scaleType="fitCenter"
            android:contentDescription="@string/pattern_comparison_processing_center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        app:layout_heightPercent="30%"
        android:gravity="center_horizontal"
        android:id="@+id/llAnswer"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/ibYes"
            android:src="@drawable/ic_leftarrow"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:background="#00ffffff"
            android:contentDescription="@string/pattern_comparison_processing_yes" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvHolder" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/ibNo"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_rightarrow"
            android:scaleType="centerCrop"
            android:background="#00ffffff"
            android:contentDescription="@string/pattern_comparison_processing_no"/>
    </LinearLayout>

</android.support.percent.PercentRelativeLayout>



